--- a/angular.json
+++ b/angular.json
@@ -100,8 +100,23 @@
             ],
             "scripts": []
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "0d85746c-6d41-4abb-83df-e8795ff4b7a8",
+    "schematicCollections": [
+      "angular-eslint"
+    ]
   }
 }
