--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.4",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "angular-cli-ghpages": "^2.0.3",
     "express": "^4.18.2",
     "firebase": "^11.8.0",
     "rxjs": "~7.8.0",
